package ar.edu.utn.frba.dds.domain.entities.roles;

public class Administrador implements Rol {

}
